Fix navigation mode, extra padding

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 body {
